fixed overflows on streams

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10511,7 +10511,7 @@ button:focus {
 
 .multiStream {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
