--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -36,7 +36,7 @@ button:focus {
 
 .multiStream {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-wrap: wrap;
   padding: 5px;
